# TextLens

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
textpulse/: __init__.py  analyzer.py  cli.py  visualizer.py
textpulse/tests/: test_all.py
