[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "textlens"
version = "1.0.0"
description = "Lightweight Text Analytics & Visualization Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "gitstq"}]
keywords = ["text-analysis", "sentiment", "nlp", "visualization", "readability", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[project.scripts]
TextLens = "TextLens.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/TextLens"
Repository = "https://github.com/gitstq/TextLens"
Issues = "https://github.com/gitstq/TextLens/issues"

[tool.setuptools.packages.find]
include = ["TextLens*"]
